# incite-data-example

./: README.md  get_data.py  incite.ttl  incite_with_data.ttl  make_model.py  pyproject.toml
csvs/: RBC_Cost_Cool.csv  Ref_Cool.csv
