[project]
name = "incite-data"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "Gabe Fierro", email = "gtfierro@mines.edu" }
]
dependencies = [
    "duckdb>=0.8.1",
    "pandas>=2.0.3",
    "rdflib>=6.3.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true
